Minor visibility fixes. 'script.js' deprecated in favor of -nojq

--- a/style.css
+++ b/style.css
@@ -300,7 +300,8 @@ a:hover {
 /* Bootstrap Custom Navbar coloring */
 .navbar-default {
   background-color: transparent;
-  border-bottom: 1px solid transparent; }
+  border-bottom: 1px solid transparent;
+  transition: background-color 1s; }
 
 #main-navbar {
   -moz-transition: border-color 0.6s;
